Small UI tweaks

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,10 +17,10 @@
                 <div class="pe-2">
                     <small class="text-success">Active</small>
                     <h3 class="m-0 p-0">&#8358;1,203,562.50</h3>
-                    <small class="fs-11">7035705838</small>
+                    <small class="text-muted">7035705838</small>
                 </div>
                 <div class="p-0">
-                    <a href="#" class="d-flex align-items-center justify-content-center lh-base text-white rounded fs-1 py-4 px-3 bg-info">
+                    <a href="#" class="d-flex align-items-center justify-content-center lh-base text-white rounded fs-1 py-3 px-3 bg-info">
                         <ion-icon name="add-outline" role="img" class="md hydrated" aria-label="add outline"></ion-icon>
                     </a>
                 </div>
