--- a/templates/partials/_transaction_card.html
+++ b/templates/partials/_transaction_card.html
@@ -6,7 +6,7 @@
         </div>
         <div class="text-black">
             <p class="d-block mb-1">Seyi Pythonian</p>
-            <p class="fs-11 m-0">10:00 PM</p>
+            <p class="fs-11 m-0 text-muted">10:00 PM</p>
         </div>
     </div>
     <div class="ps-2">
@@ -23,7 +23,7 @@
         </div>
         <div class="text-black">
             <p class="d-block mb-1">Mercy Chukwu</p>
-            <p class="fs-11 m-0">8:00 PM</p>
+            <p class="fs-11 m-0 text-muted">8:00 PM</p>
         </div>
     </div>
     <div class="ps-2">
@@ -40,7 +40,7 @@
         </div>
         <div class="text-black">
             <p class="d-block mb-1">Austa Ezeodumegwu</p>
-            <p class="fs-11 m-0">11:00 AM</p>
+            <p class="fs-11 m-0 text-muted">11:00 AM</p>
         </div>
     </div>
     <div class="ps-2">
@@ -57,7 +57,7 @@
         </div>
         <div class="text-black">
             <p class="d-block mb-1">Sayo Bello</p>
-            <p class="fs-11 m-0">1:00 AM</p>
+            <p class="fs-11 m-0 text-muted">1:00 AM</p>
         </div>
     </div>
     <div class="ps-2">
