--- a/templates/transaction_detail.html
+++ b/templates/transaction_detail.html
@@ -35,36 +35,40 @@
         </div>
 
         <ul class="bg-transparent border-top-0 border-bottom-0 bg-white d-block p-0 m-0 lh-sm mt-3">
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>Date</strong>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Date</p>
                 <span>Sep 25, 2020 10:45 AM</span>
             </li>
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>Amount</strong>
-                <h5 class="m-0">&#8358;5,000.00</h5>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Amount</p>
+                <span>&#8358;5,000.00</span>
             </li>
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>To</strong>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">To</p>
                 <span>Mercy Chukwu</span>
             </li>
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>Bank Name</strong>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Bank Name</p>
                 <span>First Bank</span>
             </li>
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>Account Number</strong>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Account Number</p>
                 <span>7035705838</span>
             </li>
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>Category</strong>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Category</p>
                 <span>Shopping</span>
             </li>
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>Transaction ID</strong>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Fees</p>
+                <span>&#8358;10.00</span>
+            </li>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Transaction ID</p>
                 <span>2G783HN902NM</span>
             </li>
-            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom py-2">
-                <strong>Description</strong>
+            <li class="ps-0 pe-0 d-flex align-items-center justify-content-between position-relative lh-base border-bottom pt-3 pb-2">
+                <p class="p-0 m-0 text-muted fs-6">Description</p>
                 <span>For the weekend flex</span>
             </li>
         </ul>
