--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -50,8 +50,8 @@
         </div>
     </div>
     <!-- * Transactions -->
-    <div class="px-3 mb-3">
-        <a href="#" class="btn btn-primary btn-block btn-lg">Load More</a>
+    <div class="mb-3 d-flex justify-content-center">
+        <a href="#" class="btn btn-info text-white lh-sm">Load More</a>
     </div>
 
 </div>
