More page content

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,9 +15,9 @@
             <!-- Balance -->
             <div class="d-flex align-items-center justify-content-between mb-3">
                 <div class="pe-2">
-                    <small class="text-success">Active</small>
+                    <small class="text-muted">Hi, Seyi</small>
                     <h3 class="m-0 p-0">&#8358;1,203,562.50</h3>
-                    <small class="text-muted">7035705838</small>
+                    <small class="text-muted">7035705838 &bull; Tier 3</small>
                 </div>
                 <div class="p-0">
                     <a href="#" class="d-flex align-items-center justify-content-center lh-base text-white rounded fs-1 py-3 px-3 bg-info">
