UI tweaks in More page

--- a/templates/more.html
+++ b/templates/more.html
@@ -31,85 +31,81 @@
     </div>
 
     <div class="px-3 py-2 mt-1 text-muted">My Account</div>
-    <div class="list-group px-3">
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+    <div class="list-group mx-3 shadow-sm">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Account information
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Account limit
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
-            Download account statement
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
+            Statements and reports
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Referrals
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
     </div>
 
-    <div class="px-3 py-2 mt-1 text-muted">Settings</div>
-    <div class="list-group px-3">
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+    <div class="px-3 py-2 mt-1 text-muted">Security</div>
+    <div class="list-group mx-3 shadow-sm">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Update your KYC
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Change password
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
-            Change transaction pin
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
+            Change your PIN
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
+            Sham balance
+            <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
+        </a>
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Change security question
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
     </div>
 
     <div class="px-3 py-2 mt-1 text-muted">Support</div>
-    <div class="list-group px-3">
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
-            Help center
-            <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
-        </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+    <div class="list-group mx-3 shadow-sm">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Frequently asked questions
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Call us on phone
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Send us a mail
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             In-app chat
-            <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
-        </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
-            Follow us on Twitter
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
     </div>
 
     <div class="px-3 py-2 mt-1 text-muted">Legal</div>
-    <div class="list-group px-3">
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+    <div class="list-group mx-3 shadow-sm">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
+            About us
+            <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
+        </a>
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Terms and conditions
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
             Privacy policy
-            <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
-        </a>
-        <a href="" class="list-group-item d-flex justify-content-between align-items-center">
-            About us
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
     </div>
