--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -24,3 +24,36 @@
 .logo {
     max-height: 24px;
 }
+
+#loader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99999;
+    background: #6236FF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none
+}
+
+#loader .loading-icon {
+    width: 42px;
+    height: auto;
+    animation: loadingAnimation 0.5s ease-in-out infinite
+}
+
+#loader.hidden {
+    display: none
+}
+
+@keyframes loadingAnimation {
+    0% {
+        transform: rotate(0deg)
+    }
+    100% {
+        transform: rotate(180deg)
+    }
+}
