Home button modals

--- a/templates/more.html
+++ b/templates/more.html
@@ -33,7 +33,7 @@
     <div class="px-3 py-2 mt-1 text-muted">My Account</div>
     <div class="list-group mx-3 shadow-sm">
         <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
-            Account information
+            Account details
             <ion-icon name="chevron-forward-outline" class="text-secondary"></ion-icon>
         </a>
         <a href="" class="lh-lg list-group-item d-flex justify-content-between align-items-center">
