--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,25 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
 
-{% include "partials/app_header.html" %}
+<!-- App Header -->
+<div class="d-flex justify-content-center align-items-center position-fixed start-0 end-0 border-0 bg-primary text-white py-3 z-index-999">
+    <div class="d-flex top-0 position-absolute align-items-center start-0 ms-2">
+        <a href="" class="text-white d-flex align-items-center justify-content-center position-relative p-2 my-2">
+            <ion-icon class="fs-1" name="person-outline"></ion-icon>
+        </a>
+    </div>
+    <img src="{% static 'images/logo.png' %}" alt="logo" class="logo">
+    <div class="top-0 d-flex align-items-center position-absolute end-0 me-2">
+        <a href="" class="text-white d-flex align-items-center justify-content-center position-relative p-2 my-2">
+            <ion-icon class="fs-1" name="notifications-outline"></ion-icon>
+        </a>
+    </div>
+</div>
+<!-- * App Header -->
 
 <!-- App Content -->
 <div class="py-5 px-0">
@@ -29,7 +44,7 @@
             <!-- Wallet Footer -->
             <div class="border-top d-flex justify-content-between align-items-start pt-3 px-0">
                 <div class="text-center">
-                    <a href="#" class="d-block text-decoration-none">
+                    <a class="d-block text-decoration-none" data-bs-toggle="modal" data-bs-target="#TransferAction" role="button">
                         <div class="d-inline-flex align-items-center justify-content-center rounded text-white mb-2 fs-2 px-3 py-2 bg-danger">
                             <ion-icon name="swap-horizontal-outline"></ion-icon>
                         </div>
@@ -37,7 +52,7 @@
                     </a>
                 </div>
                 <div class="text-center">
-                    <a href="#" class="d-block text-decoration-none">
+                    <a class="d-block text-decoration-none" data-bs-toggle="modal" data-bs-target="#AirtimeAction" role="button">
                         <div class="d-inline-flex align-items-center justify-content-center rounded text-white mb-2 fs-2 px-3 py-2 bg-primary">
                             <ion-icon name="phone-portrait-outline"></ion-icon>
                         </div>
@@ -45,7 +60,7 @@
                     </a>
                 </div>
                 <div class="text-center">
-                    <a href="#" class="d-block text-decoration-none">
+                    <a class="d-block text-decoration-none" data-bs-toggle="modal" data-bs-target="#SaveAction" role="button">
                         <div class="d-inline-flex align-items-center justify-content-center rounded text-white mb-2 fs-2 px-3 py-2 bg-success">
                             <ion-icon name="wallet-outline"></ion-icon>
                         </div>
@@ -53,7 +68,7 @@
                     </a>
                 </div>
                 <div class="text-center">
-                    <a href="#" class="d-block text-decoration-none">
+                    <a class="d-block text-decoration-none" data-bs-toggle="modal" data-bs-target="#RequestAction" role="button">
                         <div class="d-inline-flex align-items-center justify-content-center rounded text-white mb-2 fs-2 px-3 py-2 bg-warning">
                             <ion-icon name="help-outline"></ion-icon>
                         </div>
@@ -82,4 +97,145 @@
 </div>
 <!-- * App Content -->
 
+<!-- Transfer Money Modal -->
+<div class="modal fade" id="TransferAction" tabindex="-1" role="dialog">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Transfer Money</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-2">
+                        <div class="input-group">
+                            <span class="input-group-text">&#8358;</span>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                        <select class="form-select" id="bank_name">
+                            <option selected>--Select bank--</option>
+                            <option value="0">Access Bank</option>
+                            <option value="1">First Bank</option>
+                            <option value="2">Kuda Bank</option>
+                        </select>
+                    </div>
+                    <div class="mb-2">
+                        <input type="number" class="form-control" id="account_number" placeholder="Account number">
+                    </div>
+                    <div class="mb-2">
+                        <input type="text" class="form-control" id="description" placeholder="Add a note">
+                    </div>
+
+                    <button type="button" class="btn btn-primary btn-block">Send</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- * Transfer Money Modal -->
+
+<!-- Airtime Modal -->
+<div class="modal fade" id="AirtimeAction" tabindex="-1" role="dialog">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Buy Airtime</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-2">
+                        <div class="input-group">
+                            <span class="input-group-text">&#8358;</span>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                        <select class="form-select" id="network_name">
+                            <option selected>--Select Network--</option>
+                            <option value="0">MTN</option>
+                            <option value="1">Glo</option>
+                            <option value="2">Etisalat</option>
+                        </select>
+                    </div>
+                    <div class="mb-2">
+                        <input type="number" class="form-control" id="phone_number" placeholder="Phone number">
+                    </div>
+
+                    <button type="button" class="btn btn-primary btn-block">Buy</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- * Airtime Modal -->
+
+<!-- Save Modal -->
+<div class="modal fade" id="SaveAction" tabindex="-1" role="dialog">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Quick Save</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-2">
+                        <div class="input-group">
+                            <span class="input-group-text">&#8358;</span>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                        <input type="text" class="form-control" id="goal" placeholder="Goal name">
+                    </div>
+                    <div class="mb-2">
+                        <select class="form-select" id="duration">
+                            <option selected>--Duration--</option>
+                            <option value="0">30 days</option>
+                            <option value="1">60 days</option>
+                            <option value="2">90 days</option>
+                        </select>
+                    </div>
+
+                    <button type="button" class="btn btn-primary btn-block">Save</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- * Save Modal -->
+
+<!-- Request Modal -->
+<div class="modal fade" id="RequestAction" tabindex="-1" role="dialog">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Request for Money</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-2">
+                        <div class="input-group">
+                            <span class="input-group-text">&#8358;</span>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                        <input type="text" class="form-control" id="username" placeholder="Username of loanee">
+                    </div>
+                    <div class="mb-2">
+                        <input type="date" name="payback_date" id="payback_date" class="form-control">
+                    </div>
+
+                    <button type="button" class="btn btn-primary btn-block">Abeg</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- * Request Modal -->
 {% endblock %}
