--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
     <link rel="stylesheet" href="{% static 'styles/custom.css' %}">
+    <link rel="manifest" href="{% static 'manifest.webmanifest' %}">
 </head>
 
 <body>
