--- a/templates/home.html
+++ b/templates/home.html
@@ -228,7 +228,7 @@
                         <input type="text" class="form-control" id="username" placeholder="Username of loanee">
                     </div>
                     <div class="mb-2">
-                        <input type="date" name="payback_date" id="payback_date" class="form-control">
+                        <input type="date" name="payback_date" id="payback_date" class="form-control" placeholder="Payback date">
                     </div>
 
                     <button type="button" class="btn btn-primary btn-block">Abeg</button>
