Changed theme color

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#0d6efd">
     <title>{% block title %}{% endblock %} | Pue</title>
     <meta name="description" content="Pue HTML Mobile Template">
     <meta name="keywords" content="bootstrap, wallet, banking, Pue mobile template, mobile, html, responsive" />
