--- a/templates/goals.html
+++ b/templates/goals.html
@@ -4,5 +4,54 @@
 
 {% block content %}
 
+<!-- App Header -->
+<div
+    class="d-flex justify-content-center align-items-center position-fixed start-0 end-0 border-0 bg-light text-primary border-bottom py-2 z-index-999">
+    <div class="d-flex top-0 position-absolute align-items-center start-0 ms-2">
+        <a href="javascript:history.go(-1)"
+            class="text-primary d-flex align-items-center justify-content-center position-relative p-2 my-2">
+            <ion-icon class="fs-1" name="chevron-back-outline"></ion-icon>
+        </a>
+    </div>
+    <div class="fs-5 py-1 px-2 text-black">Goals</div>
+    <div class="top-0 d-flex align-items-center position-absolute end-0 me-2">
+        <a data-bs-toggle="modal" data-bs-target="#GoalAction" role="button" class="text-primary d-flex align-items-center justify-content-center position-relative p-2 my-2">
+            <ion-icon name="add-outline" class="fs-1"></ion-icon>
+        </a>
+    </div>
+</div>
+<!-- * App Header -->
+
+<!-- New Goal Modal -->
+<div class="modal fade" id="GoalAction" tabindex="-1" role="dialog">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0 p-0 m-0 w-100" role="document">
+        <div class="modal-content rounded-0">
+            <div class="modal-header">
+                <h5 class="modal-title">New Savings Goal</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-2">
+                        <div class="input-group">
+                            <span class="input-group-text">&#8358;</span>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                        <input type="text" class="form-control" id="username" placeholder="Username of loanee">
+                    </div>
+                    <div class="mb-2">
+                        <input type="date" name="payback_date" id="payback_date" class="form-control"
+                            placeholder="Payback date">
+                    </div>
+
+                    <button type="button" class="btn btn-primary w-100">Add Goal</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- * New Goal Modal -->
 
 {% endblock %}
