--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -50,8 +50,8 @@
         </div>
     </div>
     <!-- * Transactions -->
-    <div class="mb-3 d-flex justify-content-center">
-        <a href="#" class="btn btn-info text-white lh-sm">Load More</a>
+    <div class="mb-4 px-3 d-flex justify-content-center">
+        <a href="" class="btn btn-primary w-100 btn-lg">Load more</a>
     </div>
 
 </div>
