--- a/templates/home.html
+++ b/templates/home.html
@@ -35,14 +35,15 @@
                     <small class="text-muted">7035705838 &bull; Tier 3</small>
                 </div>
                 <div class="p-0">
-                    <a href="#" class="d-flex align-items-center justify-content-center lh-base text-white rounded fs-1 py-3 px-3 bg-info">
-                        <ion-icon name="add-outline" role="img" class="md hydrated" aria-label="add outline"></ion-icon>
+                    <a href="#" class="d-flex align-items-center justify-content-center lh-base text-white rounded fs-1 py-2 px-2 bg-info">
+                        <ion-icon name="add-outline" role="img" aria-label="add outline"></ion-icon>
                     </a>
                 </div>
             </div>
             <!-- * Balance -->
+            <h6 class="border-top small py-2">Quick actions</h6>
             <!-- Wallet Footer -->
-            <div class="border-top d-flex justify-content-between align-items-start pt-3 px-0">
+            <div class="1border-top d-flex justify-content-between align-items-start 1pt-3 px-0">
                 <div class="text-center">
                     <a class="d-block text-decoration-none" data-bs-toggle="modal" data-bs-target="#TransferAction" role="button">
                         <div class="d-inline-flex align-items-center justify-content-center rounded text-white mb-2 fs-2 px-3 py-2 bg-danger">
@@ -99,8 +100,8 @@
 
 <!-- Transfer Money Modal -->
 <div class="modal fade" id="TransferAction" tabindex="-1" role="dialog">
-    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0 p-0 m-0 w-100" role="document">
+        <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title">Transfer Money</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -128,7 +129,7 @@
                         <input type="text" class="form-control" id="description" placeholder="Add a note">
                     </div>
 
-                    <button type="button" class="btn btn-primary btn-block">Send</button>
+                    <button type="button" class="btn btn-primary w-100">Send</button>
                 </form>
             </div>
         </div>
@@ -138,8 +139,8 @@
 
 <!-- Airtime Modal -->
 <div class="modal fade" id="AirtimeAction" tabindex="-1" role="dialog">
-    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0 p-0 m-0 w-100" role="document">
+        <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title">Buy Airtime</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -164,7 +165,7 @@
                         <input type="number" class="form-control" id="phone_number" placeholder="Phone number">
                     </div>
 
-                    <button type="button" class="btn btn-primary btn-block">Buy</button>
+                    <button type="button" class="btn btn-primary w-100">Recharge now</button>
                 </form>
             </div>
         </div>
@@ -174,8 +175,8 @@
 
 <!-- Save Modal -->
 <div class="modal fade" id="SaveAction" tabindex="-1" role="dialog">
-    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0 p-0 m-0 w-100" role="document">
+        <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title">Quick Save</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -200,7 +201,7 @@
                         </select>
                     </div>
 
-                    <button type="button" class="btn btn-primary btn-block">Save</button>
+                    <button type="button" class="btn btn-primary w-100">Save</button>
                 </form>
             </div>
         </div>
@@ -210,8 +211,8 @@
 
 <!-- Request Modal -->
 <div class="modal fade" id="RequestAction" tabindex="-1" role="dialog">
-    <div class="modal-dialog position-fixed end-0 start-0 bottom-0" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog position-fixed end-0 start-0 bottom-0 p-0 m-0 w-100" role="document">
+        <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title">Request for Money</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -231,7 +232,7 @@
                         <input type="date" name="payback_date" id="payback_date" class="form-control" placeholder="Payback date">
                     </div>
 
-                    <button type="button" class="btn btn-primary btn-block">Abeg</button>
+                    <button type="button" class="btn btn-primary w-100">Abeg</button>
                 </form>
             </div>
         </div>
