--- a/templates/more.html
+++ b/templates/more.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}More{% endblock %}
 
@@ -13,7 +14,7 @@
     </div>
     <div class="fs-5 py-1 px-2 text-black">More</div>
     <div class="top-0 d-flex align-items-center position-absolute end-0 me-2">
-        <a href="{% url 'home' %}" class="text-primary d-flex align-items-center justify-content-center position-relative p-2 my-2">
+        <a href="{% url 'welcome' %}" class="text-primary d-flex align-items-center justify-content-center position-relative p-2 my-2">
             <ion-icon name="exit-outline" class="fs-1"></ion-icon>
         </a>
     </div>
@@ -23,9 +24,9 @@
 <!-- App Content -->
 <div class="py-5 px-0 mb-3">
 
-    <div class="mt-3 text-center">
+    <div class="my-3 text-center">
         <div class="position-relative d-inline-flex">
-           <img src="https://picsum.photos/id/1027/70/70" alt="avatar" class="rounded-circle w-100 h-auto border border-3 shadow-sm">
+           <img src="{% static 'images/f_avatar.svg' %}" width="70px" height="70px" alt="avatar" class="rounded-circle border border-3 shadow-sm">
         </div>
         <div class="d-block text-muted">Mercy Uzo Chukwu</div>
     </div>
